# 2d-graphics

./: .clang-format  CMakeLists.txt
src/: common.c  common.h  fio.c  fio.h  image.c  image.h  main.c  render_objects.c  render_objects.h  renderer.c  renderer.h  shader.c  shader.h
src/game/: actor.c  actor.h  actor_physics.c  actor_physics.h  actor_player.c  actor_player.h  game.h  input_state.c  input_state.h
